# keepass2netrc

./: LICENSE  pyproject.toml  test_keepass_database.kdbx  tox.ini
keepass2netrc/: __init__.py  cli.py  keepass_to_netrc.py
templates/: netrc.j2
tests/: test_db.py
tests/files/: expected_netrc
