[tool.poetry]
name = "keepass2netrc"
version = "0.1.0"
description = "Module that generates .netrc files out of KeePass database files"
authors = ["Juliano Gonçalves <julianoalberto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.poetry.dependencies]
python = "^3.8"
pykeepass = "^4.0.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
keepass2netrc = "keepass2netrc.cli:run"
